--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -397,9 +397,7 @@
     <string name="settings_eh_list_mode">列表模式</string>
     <string name="settings_eh_list_mode_detail">详情</string>
     <string name="settings_eh_list_mode_thumb">缩略图</string>
-    <string name="settings_eh_detail_size">详情大小</string>
-    <string name="settings_eh_detail_size_long">长</string>
-    <string name="settings_eh_detail_size_short">短</string>
+    <string name="settings_eh_detail_size">详情模式下条目宽度</string>
     <string name="settings_eh_list_tile_thumb_size">详情模式下缩略图大小</string>
     <string name="settings_eh_thumb_size">缩略图模式下缩略图大小</string>
     <string name="settings_eh_thumb_size_summary">以及画廊详情页预览图大小</string>
