--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -446,7 +446,7 @@
     <string name="settings_eh_detail_size">Item width in detail mode</string>
     <string name="settings_eh_list_tile_thumb_size">Thumb size in detail mode</string>
     <string name="settings_eh_thumb_size">Thumb size in thumb mode</string>
-    <string name="settings_eh_thumb_size_summary">And preview image size on the gallery details page</string>
+    <string name="settings_eh_thumb_show_title">Show title in thumb mode</string>
     <string name="settings_eh_thumb_resolution">Thumb resolution</string>
     <string name="settings_eh_thumb_resolution_summary">Currently %s. Certain resolutions might cause getting thumb failed</string>
     <string name="settings_eh_thumb_resolution_auto">Auto</string>
@@ -462,6 +462,7 @@
     <string name="settings_eh_tag_translations_source_url">https://placeholder</string>
     <string name="settings_eh_preview_num">The maximum number of previews on the gallery details page</string>
     <string name="settings_eh_preview_num_summary">For historical reasons, large value could cause lag</string>
+    <string name="settings_eh_preview_size">Preview image size on the gallery details page</string>
     <string name="settings_eh_filter">Blockers</string>
     <string name="settings_eh_filter_summary">Block gallery or comment by title, uploader, tags and commenter</string>
     <string name="settings_eh_request_news">Request news page on start</string>
