--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -150,6 +150,7 @@
     <string name="image_search_not_quick_search">無法添加圖片搜索為快速搜索</string>
     <string name="duplicate_quick_search">已存在相同的快速搜索，名稱為“%s”。</string>
     <string name="duplicate_name">已存在相同名稱</string>
+    <string name="save_progress">同時保存閱讀進度</string>
 
     <string name="go_to_hint">第 %1$d 頁，共 %2$d 頁</string>
 
