--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -150,6 +150,7 @@
     <string name="image_search_not_quick_search">無法將圖片搜尋加入快速搜尋</string>
     <string name="duplicate_quick_search">已存在相同的快速搜尋，名稱為“%s”。</string>
     <string name="duplicate_name">已經由重複的名稱了</string>
+    <string name="save_progress">同時保存閱讀進度</string>
 
     <string name="go_to_hint">第 %1$d 頁，共 %2$d 頁</string>
 
