Support sort downloads

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -280,7 +280,12 @@
     <string name="download_state_failed">失败</string>
     <string name="download_state_failed_2">%d 未完成</string>
     <string name="download_state_finish">已完成</string>
-    <string name="download_search">搜索标题</string>
+    <string name="download_filter_title">筛选标题</string>
+    <string name="download_sort_by">排序规则</string>
+    <string name="download_sort_default">默认</string>
+    <string name="download_sort_shuffle">随机</string>
+    <string name="download_sort_title">标题</string>
+    <string name="download_sort_category">分类</string>
     <string name="stat_509_alert_title">509 警告</string>
     <string name="stat_509_alert_text">图片配额已用尽。请停止下载，休息一下。</string>
     <string name="stat_download_done_title">下载结束</string>
@@ -615,7 +620,7 @@
     <string name="favorite_name">收藏画廊</string>
 
     <string name="black_dark_theme">纯黑深色主题</string>
-    <string name="download_filter">过滤</string>
+    <string name="download_filter">排序与筛选</string>
     <string name="download_all">全部</string>
     <string name="download_start_all_reversed">全部开始（倒序）</string>
 
