--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -611,6 +611,9 @@
     <string name="download_archive_started">開始下載壓縮包</string>
     <string name="download_archive_failure">無法下載壓縮包</string>
     <string name="archive">壓縮包</string>
+    <string name="archive_free">免費</string>
+    <string name="archive_original">原始檔案</string>
+    <string name="archive_resample">重採樣檔案</string>
     <string name="download_archive_failure_no_hath">下載壓縮包需要 H@H 客户端</string>
     <string name="settings_privacy">隱私</string>
     <string name="settings_privacy_secure">不允許荧幕抓取</string>
