--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -522,8 +522,11 @@
     <string name="settings_download_download_delay_summary">Delay %s ms per download</string>
     <string name="settings_download_preload_image">Preload image</string>
     <string name="settings_download_preload_image_summary">Preload next %s image</string>
-    <string name="settings_download_download_origin_image">Download original image</string>
-    <string name="settings_download_download_origin_image_summary">It is dangerous! You may get 509 error</string>
+    <string name="settings_download_download_origin_image">Read or download original image</string>
+    <string name="settings_download_download_origin_image_summary">%s, it\'s dangerous! You may get 509 error</string>
+    <string name="settings_download_download_origin_image_never">Never</string>
+    <string name="settings_download_download_origin_image_force">Always</string>
+    <string name="settings_download_download_origin_image_only">Download only</string>
     <string name="settings_download_restore_download_items">Restore download items</string>
     <string name="settings_download_restore_download_items_summary">Restore all download items in download location</string>
     <string name="settings_download_restore_not_found">Not found download items to restore</string>
