--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -192,6 +192,9 @@
     <string name="not_favorited">未收藏</string>
     <string name="add_favorites_dialog_title">添加收藏</string>
     <string name="remember_favorite_collection">记住收藏夹</string>
+    <string name="add_favorite_note_dialog_title">添加收藏备注</string>
+    <string name="favorite_note">收藏备注</string>
+    <string name="favorite_note_never_show">不再显示此窗口</string>
     <string name="add_to_favorite_success">已添加至收藏</string>
     <string name="remove_from_favorite_success">移除收藏</string>
     <string name="add_to_favorite_failure">添加收藏失败</string>
@@ -311,6 +314,7 @@
     <string name="download_speed_text_2">%1$s，剩余 %2$s</string>
     <string name="remember_download_label">记住下载标签</string>
     <string name="default_download_label">默认下载标签</string>
+    <string name="let_me_select">让我选择</string>
     <string name="added_to_download_list">已添加至下载列表</string>
 
     <!-- Download label -->
@@ -559,7 +563,7 @@
     <string name="delete_favorites_dialog_message">删除 %d 项收藏？</string>
     <string name="move_favorites_dialog_title">移动收藏</string>
     <string name="default_favorites_collection">默认收藏夹</string>
-    <string name="let_me_select">让我选择</string>
+    <string name="let_me_select_fav">重置设置</string>
     <string name="collections">收藏夹</string>
     <string name="need_sign_in">需要登录</string>
 
