--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -330,11 +330,13 @@
     <string name="download_state_failed_2">%d incomplete</string>
     <string name="download_state_finish">Done</string>
     <string name="download_filter_title">Filter title</string>
-    <string name="download_sort_by">Sort by</string>
+    <string name="download_sort_by">Sort By</string>
     <string name="download_sort_default">Default</string>
     <string name="download_sort_shuffle">Random</string>
-    <string name="download_sort_title">Title</string>
-    <string name="download_sort_category">Category</string>
+    <string name="download_sort_title">Gallery Title</string>
+    <string name="download_sort_author">Gallery Author</string>
+    <string name="download_sort_name">Gallery Name</string>
+    <string name="download_sort_category">Gallery Category</string>
     <string name="stat_509_alert_title">509 Alert</string>
     <string name="stat_509_alert_text">Image limit has been reached. Please stop download and have a relax.</string>
     <string name="stat_download_done_title">Download Finished</string>
