--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -296,6 +296,12 @@
     <string name="vote_down_successfully">已钦定为垃圾评论</string>
     <string name="cancel_vote_down_successfully">已不再钦定为垃圾评论</string>
     <string name="check_vote_status">查看投票情况</string>
+    <string name="format_bold"><b>加粗</b></string>
+    <string name="format_italic"><i>倾斜</i></string>
+    <string name="format_strikethrough"><s>删除线</s></string>
+    <string name="format_underline"><u>下划线</u></string>
+    <string name="format_url">链接</string>
+    <string name="format_plain">纯文本</string>
     <!-- Gallery Previews -->
     <string name="gallery_previews">画廊预览</string>
 
