--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -321,6 +321,12 @@
     <string name="vote_down_successfully">Voted down successfully</string>
     <string name="cancel_vote_down_successfully">Down-vote cancelled successfully</string>
     <string name="check_vote_status">View vote details</string>
+    <string name="format_bold"><b>Bold</b></string>
+    <string name="format_italic"><i>Italic</i></string>
+    <string name="format_strikethrough"><s>Strikethrough</s></string>
+    <string name="format_underline"><u>Underline</u></string>
+    <string name="format_url">URL</string>
+    <string name="format_plain">Plain text</string>
     <!-- Gallery Previews -->
     <string name="gallery_previews">Gallery Previews</string>
 
