--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -298,7 +298,7 @@
     <string name="check_vote_status">查看投票情況</string>
     <string name="format_bold"><b>加粗</b></string>
     <string name="format_italic"><i>傾斜</i></string>
-    <string name="format_strikethrough"><s>刪除線</s></string>
+    <string name="format_strikethrough"><strike>刪除線</strike></string>
     <string name="format_underline"><u>下劃線</u></string>
     <string name="format_url">鏈接</string>
     <string name="format_plain">純文本</string>
