--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -323,7 +323,7 @@
     <string name="check_vote_status">View vote details</string>
     <string name="format_bold"><b>Bold</b></string>
     <string name="format_italic"><i>Italic</i></string>
-    <string name="format_strikethrough"><s>Strikethrough</s></string>
+    <string name="format_strikethrough"><strike>Strikethrough</strike></string>
     <string name="format_underline"><u>Underline</u></string>
     <string name="format_url">URL</string>
     <string name="format_plain">Plain text</string>
